<resources>
    <string name="app_name">SmoothieCartManager</string>
    <string name="hello_world">Hello world!</string>
    <string name="place_order">Place Order</string>
    <string name="edit_accnt">Edit Account</string>
    <string name="view_purch">View Transactions</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_cust_acct">Customer Account</string>
    <string name="title_activity_customer_review">CustomerReview</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="select_customer">Select Customer</string>
    <string name="add_customer">Add Customer</string>
    <string name="selected_customer">Customer</string>
    <string name="selected_custID">ID</string>
    <string name="return_order">Return to Order</string>
    <string name="clear_customer">Clear Customer</string>
</resources>
